[package]
name = "aql"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/html/docs-header.html" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
enum-iterator = "1.4.1"
futures-core = "0.3.28"
futures-util = "0.3.28"
itertools = "0.11.0"
once_cell = "1.18.0"
petgraph = "0.6.4"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"